fix icon of onboarding message having wrong background color

--- a/src/overview/results/components/results-message-dismissible.css
+++ b/src/overview/results/components/results-message-dismissible.css
@@ -15,10 +15,6 @@
 .dismissButton {
     composes: removeIcon from 'src/common-ui/icons.css';
     border: none;
-    background-size: 12px;
-    background-color: transparent;
-    width: 22px;
-    height: 22px;
     outline: none;
     position: absolute;
     top: 1rem;
